--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
         <section id="welcome-section">
             <div>
                 <h1>Hi, I'm Ítalo Alves</h1>
-                <p>I turn great ideas into software products.</p>
+                <div class="headline anim-typewriter">
+                    <p >I turn great ideas into software products<span class="caret-underscore">_</span></p>
+                </div>
             </div>
         </section>
         <section id="projects">
             <header>
-                <h2>My Projects</h2>
+                <h2 class="projects-title">Check out some of my projects</h2>
             </header>
             <div class="projects-container">
                 <a class="project-tile" href="#">
@@ -61,7 +63,7 @@
     <footer>
         <section id="contact">
             <nav class="social">
-                <h3>Contact me</h3>
+                <h3>Reach me</h3>
                 <ul class="social-links">
                     <li><a id="profile-link" href="https://github.com/italoaalves" target="_blank"><i
                                 class="fab fa-github"></i></a>
