--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section id="welcome-section">
             <div>
-                <h1>Hi, I'm Ítalo Alves</h1>
+                <h1>Hi, I'm <span>Ítalo Alves</span></h1>
                 <div class="headline anim-typewriter">
                     <p >I turn great ideas into software products<span class="caret-underscore">_</span></p>
                 </div>
@@ -31,7 +31,7 @@
         </section>
         <section id="projects">
             <header>
-                <h2 class="projects-title">Check out some of my projects</h2>
+                <h2 class="session-title">Check out some of my projects</h2>
             </header>
             <div class="projects-container">
                 <a class="project-tile" href="#">
@@ -58,12 +58,25 @@
                 </a>
             </div>
         </section>
+        <section id="about-me">
+            <header>
+                <h2 class="session-title">About me</h2>
+            </header>
+            <div class="about-me-body">
+                <img class="profile-picture" src="https://avatars.githubusercontent.com/u/18471038?v=4" alt="">
+                <div class="about-me-text">
+                    <p>I'm a Brazilian Software Engineer with three years of professional experience. Currently I'm working for a content services company based in Chicago as a full stack developer.</p>
+                    <p>As a kid, I always had the need to understand how things work, specially machines. Naturally this passion for engineering grew with me. During high school I discovered computer programming. I couldn't stop my curiosity of going further into this field, which led me into a computer science degree.</p>
+                    <p>I love to build things that solve real world problems, improving our lives. Software became the tool that enabled me to do so. In my prior experiences I've worked mainly with Java, Python and Javascript. I also have knowledge in Ruby and C#.</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
         <section id="contact">
             <nav class="social">
-                <h3>Reach me</h3>
+                <h2>Reach me:</h2>
                 <ul class="social-links">
                     <li><a id="profile-link" href="https://github.com/italoaalves" target="_blank"><i
                                 class="fab fa-github"></i></a>
