--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav id="navbar">
             <ul>
-                <li><a href="#">About</a></li>
+                <li><a href="#about-me">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -24,14 +24,14 @@
         <section id="welcome-section">
             <div>
                 <h1>Hi, I'm <span>Ítalo Alves</span></h1>
-                <div class="headline anim-typewriter">
-                    <p >I turn great ideas into software products<span class="caret-underscore">_</span></p>
+                <div class="headline">
+                    <p class="caret-underscore">I turn great ideas into software products<span>&nbsp;</span></p>
                 </div>
             </div>
         </section>
         <section id="projects">
             <header>
-                <h2 class="session-title">Check out some of my projects</h2>
+                <h2 class="section-title">Check out some of my projects</h2>
             </header>
             <div class="projects-container">
                 <a class="project-tile" href="#">
@@ -59,9 +59,7 @@
             </div>
         </section>
         <section id="about-me">
-            <header>
-                <h2 class="session-title">About me</h2>
-            </header>
+            <h2 class="section-title">About me</h2>
             <div class="about-me-body">
                 <img class="profile-picture" src="https://avatars.githubusercontent.com/u/18471038?v=4" alt="">
                 <div class="about-me-text">
