add: cards retro style

--- a/index.html
+++ b/index.html
@@ -34,31 +34,31 @@
                 <h2 class="section-title">Check out some of my projects</h2>
             </header>
             <div class="projects-container">
-                <a class="project-tile" href="#">
-                    <h3 class="project-title">Lorem Ipsum</h3>
-                    <img class="project-img" src="./image/project-img.png" alt="">
-                    <p class="project description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
+                <a class="card" href="#">
+                    <h3 class="card-title">Lorem Ipsum</h3>
+                    <img class="card-img" src="./image/project-img.png" alt="">
+                    <p class="card-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
                         dolorum vero consequuntur fugiat, quaerat nihil natus sapiente dolore! Magnam maxime itaque
                         possimus ea odit libero molestiae ipsam, nihil pariatur veniam.</p>
                 </a>
-                <a class="project-tile" href="#">
-                    <h3 class="project-title">Lorem Ipsum</h3>
-                    <img class="project-img" src="./image/project-img.png" alt="">
-                    <p class="project description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
+                <a class="card" href="#">
+                    <h3 class="card-title">Lorem Ipsum</h3>
+                    <img class="card-img" src="./image/project-img.png" alt="">
+                    <p class="card-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
                         dolorum vero consequuntur fugiat, quaerat nihil natus sapiente dolore! Magnam maxime itaque
                         possimus ea odit libero molestiae ipsam, nihil pariatur veniam.</p>
 
                 </a>
-                <a class="project-tile" href="#">
-                    <h3 class="project-title">Lorem Ipsum</h3>
-                    <img class="project-img" src="./image/project-img.png" alt="">
-                    <p class="project description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
+                <a class="card" href="#">
+                    <h3 class="card-title">Lorem Ipsum</h3>
+                    <img class="card-img" src="./image/project-img.png" alt="">
+                    <p class="card-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
                         dolorum vero consequuntur fugiat, quaerat nihil natus sapiente dolore! Magnam maxime itaque
                         possimus ea odit libero molestiae ipsam, nihil pariatur veniam.</p>
                 </a>
             </div>
         </section>
-        <section id="about-me">
+        <section id="about-me" class="card">
             <h2 class="section-title">About me</h2>
             <div class="about-me-body">
                 <img class="profile-picture" src="https://avatars.githubusercontent.com/u/18471038?v=4" alt="">
