--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Italo Aves - Software Engineer</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-        crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://unpkg.com/keyboard-css@1.2.4/dist/css/main.min.css">
+    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
 </head>
 <body>
     <header>
         <nav id="navbar">
             <ul>
-                <li><a href="#about-me">About</a></li>
+                <li><a  href="#about-me">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -27,6 +26,17 @@
                 <div class="headline">
                     <p class="caret-underscore">I turn great ideas into software products<span>&nbsp;</span></p>
                 </div>
+                <nav class="social">
+                    <ul class="social-links">
+                        <li><a id="profile-link" href="https://github.com/italoaalves" target="_blank">
+                            <i class="fa-brands fa-square-github"></i>
+                        </a>
+                        </li>
+                        <li><a id="profile-link" href="https://linkedin.com/in/italoaalves" target="_blank"><i
+                            class="fab fa-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </section>
         <section id="projects">
@@ -34,31 +44,38 @@
                 <h2 class="section-title">Check out some of my projects</h2>
             </header>
             <div class="projects-container">
-                <a class="card" href="#">
-                    <h3 class="card-title">Lorem Ipsum</h3>
-                    <img class="card-img" src="./image/project-img.png" alt="">
-                    <p class="card-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
-                        dolorum vero consequuntur fugiat, quaerat nihil natus sapiente dolore! Magnam maxime itaque
-                        possimus ea odit libero molestiae ipsam, nihil pariatur veniam.</p>
-                </a>
-                <a class="card" href="#">
-                    <h3 class="card-title">Lorem Ipsum</h3>
-                    <img class="card-img" src="./image/project-img.png" alt="">
-                    <p class="card-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
-                        dolorum vero consequuntur fugiat, quaerat nihil natus sapiente dolore! Magnam maxime itaque
-                        possimus ea odit libero molestiae ipsam, nihil pariatur veniam.</p>
+                <a class="card" href="https://github.com/italoaalves/pygame-snake">
+                    <div class="card-img" ><img class="card-img" src="./images/pygame-snake.png" alt=""></div>
 
+                    <h3 class="card-title flex-justify-between">Pygame Snake<i class="fa-solid fa-arrow-up-right-from-square"></i></h3>
                 </a>
                 <a class="card" href="#">
-                    <h3 class="card-title">Lorem Ipsum</h3>
-                    <img class="card-img" src="./image/project-img.png" alt="">
-                    <p class="card-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
-                        dolorum vero consequuntur fugiat, quaerat nihil natus sapiente dolore! Magnam maxime itaque
-                        possimus ea odit libero molestiae ipsam, nihil pariatur veniam.</p>
+                    <div class="card-img" >
+                        <img class="card-img" src="./images/cx-landing-page.gif" alt="">
+                    </div>
+                    <h3 class="card-title flex-justify-between">CX platform landing page <i class="fa-solid fa-arrow-up-right-from-square"></i></h3>
+                </a>
+                <a class="card" href="#">
+                    <div class="card-img" >
+                        <img src="./images/isao-tribute.gif" alt="">
+                    </div>
+                    <h3 class="card-title flex-justify-between">Tribute to Isao Takahata<i class="fa-solid fa-arrow-up-right-from-square"></i></h3>
+                </a>
+                <a class="card" href="">
+                    <div class="card-img">
+                        <img src="./images/isao-tribute.gif" alt="">
+                    </div>
+                    <h3 class="card-title flex-justify-between">Tribute to Isao Takahata<i class="fa-solid fa-arrow-up-right-from-square"></i></h3>
+                </a>
+                <a class="card" href="">
+                    <div class="card-img" >
+                        <img src="./images/isao-tribute.gif" alt="">
+                    </div>
+                    <h3 class="card-title flex-justify-between">Tribute to Isao Takahata<i class="fa-solid fa-arrow-up-right-from-square"></i></h3>
                 </a>
             </div>
         </section>
-        <section id="about-me" class="card">
+        <section id="about-me" class="card" style="background-color: var(--white);">
             <h2 class="section-title">About me</h2>
             <div class="about-me-body">
                 <img class="profile-picture" src="https://avatars.githubusercontent.com/u/18471038?v=4" alt="">
@@ -72,18 +89,7 @@
     </main>
 
     <footer>
-        <section id="contact">
-            <nav class="social">
-                <h2>Reach me:</h2>
-                <ul class="social-links">
-                    <li><a id="profile-link" href="https://github.com/italoaalves" target="_blank"><i
-                                class="fab fa-github"></i></a>
-                    </li>
-                    <li><a id="profile-link" href="https://github.com/italoaalves" target="_blank"><i
-                        class="fab fa-linkedin"></i></a>
-                    </li>
-                </ul>
-            </nav>
+        <section>
         </section>
     </footer>
 </body>
